# ChatApp

./: .gitignore  CMakeLists.txt  README.md  screen.cpp
MF/: .screen.cpp.swp  screen.h
client/: client.cpp  server.cpp  server.h
client/Scanes/: Hlavni.cpp  Hlavni.h  Hlavni.xpp  Log.cpp  Log.h
server/: .server.cpp.swp  .users.h.swp  helpers.cpp  helpers.h  server.cpp  users.cpp  users.h
